 * General:
   * New: Add mouse menu option.
   * New: Add ability to toggle between hardware (SDL) and software (colored) cursors, in new mouse menu option.
   * Fix: Should fix flickering background on loading screen.
   * Fix: --nosound works correctly with videos now.
   * Fix: Clean up input stream after saving a save game, to prevent it from going into chat mode.
2008-09-28: Version 2.1_beta5
 * General:
   * Change: Reordered main menus. Skirmish is now under Single Player.
   * Fix: Various source compilation fixes.
 * Campaign:
   * Fix: Researching Gas Turbine Generator no longer reduces the output of power generators (bug #12262)
 * Mods:
   * New: New Team War (NTW) by Delphino added
 * Multiplayer (non-skirmish only):
   * New: Added visual feedback for when there are no games available in the lobby.
   * Fix: Smoking healthy droids gone.
   * Fix: Cyborg transports should now unload correctly. (bug #12116)
 * Buildsystem:
   * Fix: The OS X build system now works properly on both Tiger and Leopard.
   * New: Bison is no longer an external dependency when building on OS X as it is automatically downloaded if the system version of Bison is incompatible with the build system.
 * Pathfinding and savegames:
   * Change: We now use zones for path-finding again. This means savegames from beta4 are no longer useable. Your beta4 savegames can be used with 2.2, however.

2008-07-19: Version 2.1_beta4
 * General:
   * New: An error will be shown if an invalid command line option is used.
   * New: Support for coloured mouse cursors (ingame only, not in menus), controlled by configuration option "ColouredCursor". Turned off by default. (patch #956)
   * New: "Map Preview" button added to the multiplayer/skirmish lobby, including ability to preview starting positions. (patch #1040)
   * New: A 'Ready' button that all players must press in order to start a multiplayer game.
   * Change: Game speed is limited to 0.3-1.5 range in non-debug mode.