@@ -146,7 +146,6 @@ static char
 	programPID[MAX_PID_STRING] = {'\0'},
 	programPath[PATH_MAX] = {'\0'},
 	gdbPath[PATH_MAX] = {'\0'};
-static const char * gdmpPath = "/tmp/warzone2100.gdmp";
 
 
 /**
@@ -601,12 +600,16 @@ static void posixExceptionHandler(int signum, siginfo_t * siginfo, WZ_DECL_UNUSE
 	uint32_t btSize = backtrace(btBuffer, MAX_BACKTRACE);
 # endif
 
-	const int dumpFile = open(gdmpPath, O_WRONLY|O_CREAT|O_TRUNC, S_IRUSR|S_IWUSR);
+	// XXXXXX will be converted into random characters by mkstemp(3)
+	static const char * gdmpPath = "/tmp/warzone2100.gdmp-XXXXXX";
+
+	char dumpFilename[sizeof(gdmpPath)];
+	const int dumpFile = mkstemp(dumpFilename);
 
 
 	if (dumpFile == -1)
 	{
-		printf("Failed to create dump file '%s'", gdmpPath);
+		printf("Failed to create dump file '%s'", dumpFilename);
 		return;
 	}
 
@@ -640,7 +643,8 @@ static void posixExceptionHandler(int signum, siginfo_t * siginfo, WZ_DECL_UNUSE
 	// Use 'gdb' to provide an "extended" backtrace
 	gdbExtendedBacktrace(dumpFile);
 
-	printf("Saved dump file to '%s'\n", gdmpPath);
+	printf("Saved dump file to '%s'\n"
+	       "If you create a bugreport regardings this crash, please include this file.\n", dumpFilename);
 	close(dumpFile);
 
 
